tests/negative/neg_own_observe_requires_access.safe
-- Test: neg_own_observe_requires_access
-- Description: Local observe must use the .Access attribute.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4.p101a:ef2d8fd1
-- Expected: REJECT observe_requires_access

package observe_requires_access_test

   type config is record
      rate : natural;


   type config_ptr is access config;

   function bad_observe
      Owner    : config_ptr = new ((rate = 100) as config);
      Observer : access constant config = Owner;  -- ERROR: must use Owner.Access


